@@ -20,7 +20,6 @@ INCLUDE_DIRECTORIES(
         ${SQLITE3_INCLUDE_DIRS}
         ${LIBCURL_INCLUDE_DIRS}
         ${LIBTAG_INCLUDE_DIRS}
-	${LIBFLAC_INCLUDE_DIRS}
         ${LIBDBUS_INCLUDE_DIRS} 
         ${LIBGIO_INCLUDE_DIRS} 
 	${LIBGPOD_INCLUDE_DIRS}
@@ -312,7 +311,6 @@ TARGET_LINK_LIBRARIES( guayadeque
 	${SQLITE3_LIBRARIES}
 	${LIBCURL_LIBRARIES}
         ${LIBTAG_LIBRARIES}
-	${LIBFLAC_LIBRARIES}
         ${LIBDBUS_LIBRARIES}
 	${LIBGIO_LIBRARIES}
 	${LIBGPOD_LIBRARIES}
